@@ -1,5 +1,8 @@
 2011-01-19  Jakub Jelinek  <jakub@redhat.com>
 
+	PR c++/47303
+	* g++.dg/template/anonunion1.C: New test.
+
 	PR rtl-optimization/47337
 	* gcc.c-torture/execute/pr47337.c: New test.
 
